--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -21,6 +21,12 @@
   background-color: aqua;
 }
 
+.logo a{
+  margin: 10px;
+  font-weight: 500;
+  font-size: 15px;
+}
+
 .menu{
   display: flex;
   flex-direction: row;
@@ -30,8 +36,21 @@
   align-items: center;
 }
 
-
-
-h1{
+.menu a{
   margin: 10px;
+  font-weight: 500;
+  font-size: 15px;
 }
+
+.search{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.search input{
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50px;
+}
+
