--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -8,17 +8,20 @@
 .header {
   display: flex;
   flex-direction: row;
+  flex: 1;
   padding: 10px;
   margin: 0 auto;
+  align-items: center;
 }
 
 .logo{
   display: flex;
-  flex-direction: row;
-  flex: 0.4;
-  padding: 10px;
+  flex-direction: column;
+  flex: 0.2;
   margin: 10px;
   background-color: aqua;
+  text-align: center;
+  align-items: center;
 }
 
 .logo a{
@@ -30,10 +33,18 @@
 .menu{
   display: flex;
   flex-direction: row;
-  flex: 0.4;
+  flex: 0.6;
   margin: 10px;
   background-color: brown;
   align-items: center;
+  text-align: center;
+}
+
+.each{
+  display: flex;
+  flex-direction: column;
+  flex: 0.6;
+  text-align: center;
 }
 
 .menu a{
@@ -45,12 +56,26 @@
 .search{
   display: flex;
   flex-direction: row;
+  flex: 0.2;
+  margin: 10px;
   align-items: center;
+  text-align: center;
+  background-color: khaki;
 }
 
 .search input{
   text-align: center;
   background-color: rgb(255, 255, 255);
   border-radius: 50px;
+  margin: 10px;
+  align-items: center;
+  text-align: center;
 }
 
+.eachs{
+  display: flex;
+  flex-direction: column;
+  flex: 0.5;
+  text-align: center;
+  align-items: center;
+}
