--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -1,8 +1,10 @@
 .container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   margin: 0 auto;
   flex: 1;
+  overflow: hidden;
+  background-image: linear-gradient(to top, rgb(37, 37, 37), rgb(0, 154, 197));
 }
 
 .header {
@@ -10,8 +12,9 @@
   flex-direction: row;
   flex: 1;
   padding: 10px;
-  margin: 0 auto;
-  align-items: center;
+  margin: 0;
+  align-items:flex-start;
+  min-height: 5vh;
 }
 
 .logo{
@@ -19,7 +22,6 @@
   flex-direction: row;
   flex: 0.2;
   margin: 10px;
-  background-color: aqua;
   text-align: center;
   align-items: center;
 }
@@ -28,8 +30,14 @@
   margin: 10px;
   font-weight: 500;
   font-size: 15px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.logo a:hover{
   color: #212121;
   text-decoration: none;
+  transition: 500ms;
 }
 
 .menu{
@@ -37,24 +45,43 @@
   flex-direction: row;
   flex: 0.6;
   margin: 10px;
-  background-color: brown;
   align-items: center;
   text-align: center;
 }
 
-.each{
+.each1{
+  display: flex;
+  flex-direction: column;
+  flex: 0.6;
+  text-align: right;
+}
+
+.each2{
   display: flex;
   flex-direction: column;
   flex: 0.6;
   text-align: center;
 }
 
+.each3{
+  display: flex;
+  flex-direction: column;
+  flex: 0.6;
+  text-align: left;
+}
+
 .menu a{
   margin: 10px;
   font-weight: 500;
   font-size: 15px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.menu a:hover{
   color: #212121;
   text-decoration: none;
+  transition: 500ms;
 }
 
 .search{
@@ -64,16 +91,23 @@
   margin: 10px;
   align-items: center;
   text-align: center;
-  background-color: khaki;
 }
 
 .search input{
   text-align: center;
-  background-color: rgb(255, 255, 255);
+  background-image: linear-gradient(to top, rgb(0, 167, 196), rgb(2, 143, 182));
   border-radius: 50px;
   margin: 10px;
   align-items: center;
   text-align: center;
+  height: 25px;
+  border-style: groove;
+  border-color: #212121;
+  color: #fff;
+}
+
+::placeholder {
+  color: #fff;
 }
 
 .eachs{
@@ -102,4 +136,201 @@ img:hover{
   flex: 0.6;
   text-align: center;
   align-items: flex-start;
+}
+
+.content{
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  align-items: center;
+}
+
+.poster{
+  display: flex;
+  flex-direction: column;
+  flex: 0.3;
+  align-items: flex-end;
+  padding: 30px;
+}
+
+.poster img{
+  margin: 10px;
+}
+
+.description{
+  display: flex;
+  flex-direction: column;
+  flex: 0.7;
+  align-items: flex-start;
+  padding: 30px;
+  height: 480px;
+  margin: 0;
+}
+
+.description1{
+  display: flex;
+  flex-direction: row;
+  flex: 0.25;
+  align-items: flex-start;
+  padding: 30px;
+  margin: 10px;
+  color: #fff;
+}
+
+.description1 a{
+  margin: 8px;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.description1 a:hover{
+  color: #212121;
+  text-decoration: none;
+  transition: 500ms;
+}
+
+.description2{
+  display: flex;
+  flex-direction: row;
+  flex: 0.25;
+  align-items: center;
+  padding: 30px;
+  margin: 10px;
+}
+
+.description2-1{
+  display: flex;
+  flex-direction: row;
+  flex: 0.5;
+  align-items: center;
+  margin-right: 20vh;
+}
+
+.description2-1 a{
+  margin: 10px;
+  font-weight: 500;
+  font-size: 15px;
+  color: #fff;
+  text-decoration: none;
+}
+
+.description2-1 a:hover{
+  color: #212121;
+  text-decoration: none;
+  transition: 500ms;
+}
+
+.description2-2{
+  display: flex;
+  flex-direction: row;
+  flex: 0.5;
+  align-items: center;
+  margin-left: 20vh;
+}
+
+.description2-2 p{
+  color: #fff;
+  margin: 3px;
+}
+
+.description2-2 a{
+  color: #fff;
+  margin-left: 2px ;
+  text-decoration: none;
+  margin: 3px;
+}
+
+.description2-2 a:hover{
+  color: #212121;
+  transition: 500ms;
+}
+
+.description3{
+  display: flex;
+  flex-direction: row;
+  flex: 0.25;
+  align-items: center;
+  padding: 30px;
+  margin: 10px;
+  color: #fff;
+}
+
+.description3 a{
+  font-weight: 500;
+  font-size: 16px;
+  color: #fff;
+  text-decoration: none;
+}
+
+
+.description4{
+  display: flex;
+  flex-direction: row;
+  flex: 0.25;
+  align-items: center;
+  margin: 10px;
+  padding: 30px;
+
+}
+
+.description4 button{
+  margin-left: 6px;
+  margin-right: 6px;
+  cursor: pointer;
+  border-radius: 30px;
+  padding: 8px;
+}
+
+button.ticket{
+  height: 50px;
+  width: 160px;
+  background-image: linear-gradient(to bottom, rgb(255, 252, 64), rgb(253, 252, 165));
+  border-style: groove;
+  border-color: rgb(253, 252, 165);
+  font-weight: 600;
+  color: rgb(0, 137, 175);
+}
+
+button.ticket:hover{
+  height: 50px;
+  width: 160px;
+  background-image: linear-gradient(to bottom, rgb(224, 222, 55), rgb(231, 230, 151));
+  border-style: groove;
+  border-color: #212121;
+  transition: 500ms;
+  font-weight: 600;
+  color: rgb(3, 118, 150);
+}
+
+button.play{
+  height: 50px;
+  width: 50px;
+  background-color:rgba(255, 255, 255, 0);
+  border-style: groove;
+  border-color: #fff;
+  color: #fff;
+}
+
+button.play:hover{
+  color: #212121;
+  border-color: #212121;
+  transition: 500ms;
+}
+
+button.heart{
+  height: 50px;
+  width: 50px;
+  font-size: 20px;
+  background-color:rgba(255, 255, 255, 0);
+  border-style: groove;
+  border-color: #fff;
+  color: #fff;
+}
+
+button.heart:hover{
+  color: #212121;
+  border-color: #212121;
+  transition: 500ms;
 }
